--- a/ASSIGNMENT_2/SOURCE/landr.html
+++ b/ASSIGNMENT_2/SOURCE/landr.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -30,19 +29,15 @@
 
                 </div>
 
-
-
-
-
                 <div class="tab-content">
                     <div role="tabpanel" class="tab-pane active" id="home">
                         <div class="row">
 
                             <div class="col-md-8 mobile-pull">
                                 <article role="login">
-                                    <h3 class="text-center"><i class="fa fa-lock"></i>WIREFRAMES WEBFORM</h3>
+                                    <h3 class="text-center"><i class="fa fa-lock"></i>WIREFRAMES WEBFORM LOGIN</h3>
 
-                                    <form action="homePage.html">
+                                    <form action="directionPage.html">
                                         <fieldset>
                                             <legend>LoginHere</legend>
 
@@ -116,7 +111,7 @@
                                                 <div class="form-group">
                                                     <label class="col-md-5 control-label">User Name</label>
                                                     <div class="col-md-7">
-                                                        <input type="text" name="name" placeholder="Enter Full Name"  class="form-control" />
+                                                        <input type="text" name="name" placeholder="Enter Full Name"  required class="form-control" />
                                                         <span class="text-danger"><?php if (isset($name_error)) echo $name_error; ?></span>
                                                     </div>
                                                 </div>
@@ -138,7 +133,7 @@
                                                 <div class="form-group">
                                                     <label class="col-md-5 control-label">User Email</label>
                                                     <div class="col-md-7">
-                                                        <input type="email" name="email" placeholder="Email"  class="form-control" value="" />
+                                                        <input type="email" name="email" placeholder="Email" required class="form-control" value="" />
                                                         <span class="text-danger"><?php if (isset($email_error)) echo $email_error; ?></span>
                                                     </div>
                                                 </div>
@@ -146,18 +141,18 @@
                                                 <br>
                                                 <!-- Text input-->
                                                 <div class="form-group">
-                                                    <label class="col-md-5 control-label">Password <small>(optional)</small></label>
+                                                    <label class="col-md-5 control-label">Password </label>
                                                     <div class="col-md-7">
-                                                        <input type="password" name="password" placeholder="Password"  class="form-control" value="" />
+                                                        <input type="password" name="password" placeholder="Password"  required class="form-control" value="" />
                                                         <span class="text-danger"><?php if (isset($password_error)) echo $password_error; ?></span>
                                                     </div>
                                                 </div>
 
                                                 <br><br>    <!-- Text input-->
                                                 <div class="form-group">
-                                                    <label class="col-md-5 control-label">Confirm Password <small>(optional)</small></label>
+                                                    <label class="col-md-5 control-label">Confirm Password </label>
                                                     <div class="col-md-7">
-                                                        <input type="password" name="cpassword" placeholder="Confirm Password"  class="form-control" />
+                                                        <input type="password" name="cpassword" placeholder="Confirm Password" required class="form-control" />
                                                         <span class="text-danger"><?php if (isset($cpassword_error)) echo $cpassword_error; ?></span>
                                                     </div>
                                                 </div>
@@ -166,7 +161,7 @@
                                                 <div class="form-group">
                                                     <label class="col-md-5 control-label">User Telephone</label>
                                                     <div class="col-md-7">
-                                                        <input type="text" class="form-control" id="telephone"  name ="telephone"placeholder=""  />
+                                                        <input type="text" class="form-control" id="telephone"  name ="telephone"placeholder="(optional)"  />
                                                     </div>
                                                 </div>
                                                 <br> <br>
